# StellarSave

./: .gitignore  DEPLOYMENT.md  Readme.md
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/rewards/: Cargo.toml
contracts/rewards/src/: lib.rs  test.rs
contracts/rewards/test_snapshots/test/: test_initialize.1.json
contracts/savings/: Cargo.toml
contracts/savings/src/: lib.rs  test.rs
contracts/savings/test_snapshots/test/: test_double_initialize.1.json  test_initialize.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs  test.rs
contracts/token/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_initialize_and_mint.1.json  test_transfer.1.json
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: Dashboard.tsx  DepositForm.tsx  TokenFaucet.tsx  WalletButton.tsx  WithdrawSection.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/hooks/: useStellarContract.ts
scripts/: deploy-mainnet-resume.sh  deploy-mainnet.sh  deploy.sh
