[workspace]
members = [
    "token",
    "savings",
    "rewards",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 16
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
